--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.10.1",
     "next": "^13.5.6",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/react": "18.2.29",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.5",
