--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/react": "18.2.29",
