--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.10.1",
+    "framer-motion": "^10.16.4",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "react": "^18",
